--- a/html/Map/bmap_win.html
+++ b/html/Map/bmap_win.html
@@ -16,7 +16,7 @@
         <a class="aui-btn aui-btn-info aui-pull-left" tapmode onclick="closeWin()">
             <span class="aui-iconfont aui-icon-close"></span>
         </a>
-        <div class="aui-title">位置</div>
+        <div class="aui-title">点击选择位置</div>
     </header>
 </body>
 <script type="text/javascript" src="../../script/api.js" ></script>
