--- a/html/infoDetail_frm.html
+++ b/html/infoDetail_frm.html
@@ -61,7 +61,7 @@
        <div class="aui-card-list-header aui-padded-t-0">
          <div class="aui-text-danger"><small>￥</small><big class="aui-font-size-20">{{= it.price}}</big></div>
          <div class="aui-pull-right" style="font-size:0.6rem;">发布时间：<span>{{= it.add_time}}</span></div>
-         <div class="aui-pull-right" style="font-size:0.6rem;">运费：<span>{{= it.postage}}</span></div>
+         <!-- <div class="aui-pull-right" style="font-size:0.6rem;">运费：<span>{{= it.postage}}</span></div> -->
        </div>
        <div class="aui-card-list-content">
          <ul class="aui-list aui-media-list">
