--- a/html/userWindow.html
+++ b/html/userWindow.html
@@ -179,7 +179,7 @@
                     <img src="../image/user-icon8.png" alt="">
                 </div>
                 <div class="aui-list-item-inner aui-list-item-arrow" style="border-bottom:none;">
-                    历史记录111
+                    历史记录
                 </div>
             </li>
         </ul>
