--- a/html/Fabu/Frame0List_frm.html
+++ b/html/Fabu/Frame0List_frm.html
@@ -24,7 +24,7 @@
     }
     .photos img {
         display: block;
-        width: 100%; 
+        width: 100%;
     }
     .add-photos > div {
         width: 100%;
@@ -111,7 +111,7 @@
                       </div>
                   </div>
               </li>
-              <li class="aui-list-item">
+              <!-- <li class="aui-list-item">
                   <div class="aui-list-item-inner">
                       <div class="aui-list-item-label">
                         运费
@@ -120,7 +120,7 @@
                           <input type="number" placeholder="" name="postage" id="postage">
                       </div>
                   </div>
-              </li>
+              </li> -->
               <li class="aui-list-item">
                   <div class="aui-list-item-inner">
                       <div class="aui-list-item-input">
